# haskell-indicator-function

./: .gitignore  LICENSE  README.md  test.cabal
app/: Main.hs  nums.txt  output.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
